# Image_Processor

./: CMakeLists.txt  README.md
doc/: readme.md
include/: Exceptions.h  Filters.h  PictureInfo.h
include/input_control/: ControlParameters.h  Input_OutputProcessing.h
src/: Filters.cpp  PictureInfo.cpp  image_processor.cpp
src/input_control/: ControlParameters.cpp  Input_OutputProcessing.cpp
test_script/: unit_tests.cpp
test_script/my_data/: WrongTypeFile.txt
